/*
 * Copyright Â© 2020-2021 by Academia Sinica
 *
 * This file is part of SKISSM.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * SKISSM is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with SKISSM.  If not, see <http://www.gnu.org/licenses/>.
 */
syntax = "proto3";

package skissm;

option java_package = "org.e2eelab.skissm.proto";
option java_outer_classname = "E2eeAccount";

import "skissm/e2ee_address.proto";
import "skissm/identity_key.proto";
import "skissm/signed_pre_key.proto";
import "skissm/one_time_pre_key.proto";

message e2ee_account {
    uint32 version = 1;
    uint64 account_id = 2;
    bool saved = 3;
    skissm.e2ee_address address = 4;
    string password = 5;
    uint32 cipher_suite_id = 6;
    skissm.identity_key identity_key = 7;
    skissm.signed_pre_key signed_pre_key = 8;
    repeated skissm.one_time_pre_key one_time_pre_keys = 9;
    uint32 next_one_time_pre_key_id = 10;
}